2005-11-21  Sven Panne  <sven.panne@aedion.de>

	* .cvsignore, autogen.sh, src/.cvsignore: Synched with recent
	changes regarding the move to automake.

	* COPYING, Makefile.am, NEWS, README, include/.cvsignore,
	include/Makefile.am, src/Makefile.am: Added.

	* INSTALL, Makefile.in, config.guess, config.sub, install-sh,
	src/Makefile.in: Removed.

	* configure.ac: Define NDEBUG unless debugging is enabled.

	* src/mixaudio16.c: Fixed a "comparison between signed and
	unsigned" warning in an assertion.

	* .cvsignore, CMakeLists.txt, Makefile.in, configure.ac: Updated to
	follow toplevel directory cleanup.

	* admin/.cvsignore, admin/.indent.pro, admin/openal-config.in,
	admin/openal.pc.in: Added.

	* .indent.pro, openal-config.in, openal.pc.in: Removed.

2005-11-21  Prakash Punnoor <prakash@punnoor.de>

	* src/mixaudio16.c: fix NDEBUG related stuff

	* CMakeLists.txt: add debug stuff; make options names shorter;
	added test-suite

	* INSTALL.cmake: update status; more ccmake info;
	merged to INSTALL; removed

	* INSTALL: merged INSTALL.cmake

	* CMakeModules/CMakeASMCompiler.cmake.in,
	CMakeModules/CMakeASMInformation.cmake,
	CMakeModules/CMakeDetermineASMCompiler.cmake: moved

	* admin/CMakeModules/CMakeASMCompiler.cmake.in,
	admin/CMakeModules/CMakeASMInformation.cmake,
	admin/CMakeModules/CMakeDetermineASMCompiler.cmake: added

	* README: added test-suite

2005-11-20  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt, CMakeModules/CMakeASMCompiler.cmake.in,
	CMakeModules/CMakeASMInformation.cmake,
	CMakeModules/CMakeDetermineASMCompiler.cmake, INSTALL.cmake: preliminary
	CMake support


2005-11-19  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac: Put back AC_PROG_CXX, as it is needed for testcase
	
	* src/al_siteconfig.h, src/Makefile.in, test/Makefile.in: don't include
	via "../config.h"; add .. to includes

2005-11-18  Sven Panne  <sven.panne@aedion.de>

	* src/al_buffer.c, src/al_ext.c: Cleaned up buffer state handling.
