@@ -1,14 +1,12 @@
-.DS_Store
-English.lproj
-English.pbproj
+INSTALL
 Makefile
 Makefile.in
-OpenAL.pbproj
+aclocal.m4
 autom4te.cache
-build
-config.cache
 config.h
 config.h.in
 config.log
 config.status
 configure
+libtool
+stamp-h1
