@@ -1,0 +1,3 @@
+pkgconfigdir   = $(prefix)/lib/pkgconfig
+pkgconfig_DATA = openal.pc
+bin_SCRIPTS    = openal-config
