@@ -1,1 +1,2 @@
-nobase_include_HEADERS = AL/alext.h
+SUBDIRS = AL
+
