@@ -4,7 +4,7 @@
 void _alDetectCPUCaps(void);
 
 #if defined(__i386__) || defined(__x86_64__)
-#include "x86_cpu_caps_prk.h"
+#include "arch/i386/x86_cpu_caps_prk.h"
 #endif
 
 #endif /* AL_CPU_CAPS_H */
